changes in header

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,8 +3,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: #fff;
+    background-color: #f1d6d6;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 100%;
 }
 
 .navbar-logo img {
