--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* General App styles */
+/* General App styles
 .App {
   font-family: 'Arial', sans-serif;
   padding: 20px;
@@ -54,16 +54,15 @@
   border-radius: 50px;
   margin-right: 10%; /* Adjusted margin for better alignment */
   margin-bottom: 3%;
-}
+} */
 
 /* Product List Grid Layout */
 .product-list {
   display: grid;
-<<<<<<< HEAD
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); /* Adjust minimum size of grid items */
-=======
+
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); /* Responsive grid for all screen sizes */
->>>>>>> 31bb7e0789669f578e4e26272821d22dcb91876c
+
   gap: 20px;
   padding: 20px;
   background-color: #f2f4f5;
