--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 10px 20px;
   background-color: #f8f8f8;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 .navbar-logo {
@@ -80,6 +80,7 @@
 
 .cart-icon {
   display: flex;
+  justify-content: baseline;
   align-items: center;
   position: relative;
 }
@@ -153,8 +154,18 @@
   border: 2px solid white;
   /* box-shadow: 0px 15px 30px rgb(254, 253, 253); */
 }
+.navbar-icons{
+  display: flex;
+  justify-content: baseline;
+  column-gap: 25px;
+  margin-right: 70px;
+}
 
-
+.cart-count{
+  background-color: aliceblue;
+  color: black;
+  font-size: 20px;
+}
 /* Responsive for Small and Extra Small Screens */
 
 /* Small screens (Tablets) */
@@ -211,7 +222,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
   }
 
   .navbar-search input {
