--- a/src/components/BestSellers.css
+++ b/src/components/BestSellers.css
@@ -129,16 +129,16 @@
 }
 
 .shopnow {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
+    padding: 12px 40px;
+    background-color: #fcfdfe;
+    color: rgb(52, 54, 202);
+    border: 2px solid blue;
+    border-radius: 25px;
     cursor: pointer;
 }
 
 .shopnow:hover {
-    background-color: #0056b3;
+    background-color: #accced;
 }
 
 
