--- a/src/components/SearchResultsPage.css
+++ b/src/components/SearchResultsPage.css
@@ -97,3 +97,62 @@
     display: flex;
     justify-content: baseline;
 }
+
+.search-results-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* 5 items per row */
+    gap: 16px; /* Adds space between grid items */
+    justify-items: center; /* Center the grid items */
+  }
+  
+  .search-result-item {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 16px;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  .search-result-item:hover {
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  .search-result-item img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+  
+  .search-result-item h3 {
+    font-size: 18px;
+    margin: 10px 0 5px;
+    color: #242323;
+  }
+  
+  .search-result-item p {
+    margin: 4px 0;
+    font-size: 14px;
+    color: #6c6969;
+  }
+  
+  .search-result-item p strong {
+    color: #333;
+  }
+  
+  @media (max-width: 1024px) {
+    .search-results-container {
+      grid-template-columns: repeat(4, 1fr); /* 4 items per row for tablets */
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .search-results-container {
+      grid-template-columns: repeat(2, 1fr); /* 2 items per row for mobile */
+      gap: 12px;
+    }
+  
+    .search-result-item {
+      width: 100%;
+    }
+  }
+  
