--- a/src/components/SignupPage.css
+++ b/src/components/SignupPage.css
@@ -1,4 +1,4 @@
-/* SignupPage.css */
+/* SignupPage.css
 .signup-container {
     display: flex;
     flex-direction: column;
@@ -55,4 +55,128 @@
       font-size: 1.5rem;
     }
   }
-  
+   */
+
+   .best-sellers {
+    padding: 20px;
+}
+
+.carousel {
+    display: flex;
+    overflow-x: auto;
+    gap: 20px;
+    padding: 20px 0;
+    justify-content: center;
+    background-color: rgb(250, 243, 243);
+}
+
+.item {
+    border: 1px solid #f9d7d7;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #fdfbfb;
+    flex-shrink: 0;
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.myimage {
+    width: 50%;
+    height: auto;
+    max-height: 300px;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
+
+.item:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+}
+
+.myretailprice {
+    margin: 10px 0;
+    font-weight: bold;
+    text-align: center;
+}
+
+.price {
+    margin-top: auto;
+    display: flex;
+    gap: 16px;
+}
+
+.shopnow {
+    padding: 12px 40px;
+    background-color: #fcfdfe;
+    color: rgb(52, 54, 202);
+    border: 2px solid blue;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.shopnow:hover {
+    background-color: #accced;
+}
+
+.view:hover {
+    background-color: darkblue;
+}
+
+.view {
+    padding: 10px 20px;
+    background-color: rgb(245, 59, 30);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.best {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .carousel {
+      flex-wrap: nowrap;
+      justify-content: center;
+  }
+}
+
+
+.controls-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.custom-arrows {
+  display: flex;
+  justify-content: space-between;
+  width: 100px;
+}
+.prev-arrow, .next-arrow {
+  background: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.view-more-button {
+  background: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-left: 20px;
+}
