--- a/src/components/BestSellers.css
+++ b/src/components/BestSellers.css
@@ -80,17 +80,19 @@
 .best-sellers {
     /* text-align: center; */
     padding: 20px;
+    margin-bottom: 100px;
+    background-color: white;
+
 
 
 }
-
 .carousel {
     display: flex;
     overflow-x: auto;
     gap: 20px;
     padding: 20px 0;
     justify-content: center;
-    background-color: rgb(250, 243, 243);
+    background-color: rgba(193, 233, 243, 0.032);
    
 }
 
@@ -98,7 +100,7 @@
     border: 1px solid #f9d7d7;
     padding: 10px;
     border-radius: 8px;
-    background-color: #fdfbfb;
+    background-color: #fdfeff;
     flex-shrink: 0;
     width: 450px;
     display: flex;
@@ -132,7 +134,7 @@
     padding: 12px 40px;
     background-color: #fcfdfe;
     color: rgb(52, 54, 202);
-    border: 2px solid blue;
+    border: 1px solid blue;
     border-radius: 25px;
     cursor: pointer;
 }
@@ -143,7 +145,7 @@
 
 
 .view:hover {
-    background-color: darkblue;
+    background-color: rgb(2, 65, 107);
 }
 
 /* Responsive Styles */
@@ -156,11 +158,11 @@
 
 .view {
     /* margin-left: 88vw; */
-    padding: 10px 20px;
-    background-color: rgb(245, 59, 30);
-    color: white;
+    padding: 13px 23px;
+    background-color: #228ffd;
+    color: rgb(253, 252, 252);
     border: none;
-    border-radius: 4px;
+    border-radius: 20px;
     cursor: pointer;
     margin-top: 20px;
     margin-bottom: 20px;
