--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #f8f8f8;
+  background-color: #f9ffff;
   /* flex-wrap: wrap; */
 }
 
@@ -44,13 +44,13 @@
 .navbar-links li a {
   text-decoration: none;
   color: #333;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 
 .nav-links li a:hover {
   /* background-color: #45a049;  */
-  color: rgb(99, 148, 253);
+  color: rgb(255, 139, 220);
 }
 /* Auth, Cart, and Search */
 .navbar-auth,
@@ -83,17 +83,19 @@
   justify-content: baseline;
   align-items: center;
   position: relative;
+  margin-bottom: 15px ;
+  color: black;
 }
 
 .cart-count {
   position: absolute;
-  top: 5px;
-  left: 35px;
+  top: -11px;
+  left: 10px;
   background-color: rgb(16, 13, 13);
   color: white;
   border-radius: 50%;
-  padding: 10px 6px;
-  font-size: 12px;
+  /* padding:  1px; */
+  font-size: 10px;
 }
 
 .navbar-search input {
@@ -164,7 +166,7 @@
 .cart-count{
   background-color: aliceblue;
   color: black;
-  font-size: 20px;
+  font-size: 19px;
 }
 /* Responsive for Small and Extra Small Screens */
 
