--- a/src/components/BestSellers.css
+++ b/src/components/BestSellers.css
@@ -16,7 +16,7 @@
     gap: 20px;
     padding: 20px 0;
     justify-content: center;
-    background-color: rgba(193, 233, 243, 0.032);
+    background-color: rgba(224, 246, 252, 0.032);
    
 }
 
@@ -24,12 +24,13 @@
     border: 1px solid #f9d7d7;
     padding: 10px;
     border-radius: 8px;
-    background-color: #fdfeff;
+    /* background-color: #fdfeff; */
     flex-shrink: 0;
     width: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background:linear-gradient(white,rgb(237, 235, 235));
 }
 
 .myimage {
