--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -18,6 +18,7 @@
   height: 40px; /* Height of the wave */
   background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%230e0f0f" fill-opacity="1" d="M0,128L120,122.7C240,117,480,107,720,128C960,149,1200,203,1320,234.7L1440,267L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>') no-repeat top;
   background-size: cover;
+  
 }
 
 
@@ -27,6 +28,7 @@
   justify-content: space-evenly;
   /* align-items: center; */
   /* flex-wrap: wrap;  */
+  
 }
 
 /* Combined section for Links, Category, and Shop */
@@ -41,11 +43,13 @@
 
 .combined-sections .footer-section {
   min-width: 150px;
+
 }
 
 /* Headings for footer sections */
 .footer-section h3 {
   margin-bottom: 10px;
+  color: white;
 }
 
 /* Unordered list styling for footer sections */
@@ -53,11 +57,13 @@
   list-style: none;
   padding: 0;
   line-height: 1.7;
+  color: white;
 }
 
 .footer-section ul li {
   margin-bottom: 5px;
   cursor: pointer; /* Pointer cursor for better UX */
+  
 }
 
 /* Styling for vertical line in footer */
@@ -125,7 +131,7 @@
   gap: 10px;
   color: white;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   margin-top: 20px;
   padding-left: 10%;
 }
