--- a/src/components/ProductDetails.css
+++ b/src/components/ProductDetails.css
@@ -15,7 +15,20 @@
   .main-image{
     width: 20px;
   }
-  
+  button{
+    padding: 8px;
+    background-color: gold;
+    color: black;
+    border-radius: 6px;
+    border: none;
+    margin: 10px;
+  }
+  button:hover{
+    box-shadow: 0px 2px 4px black;
+    transform: translateY(-10);
+    border: 1px solid rgb(0, 21, 255);
+    background-color:rgb(255, 215, 0);
+  }
 
   
   .main-image {
